--- a/index.htm
+++ b/index.htm
@@ -111,15 +111,15 @@
 						<div class="slide-desc">
 							<div class="game_info_area">
 								<div class="slide_desc_left">
-									<h2>Tu Server Mu <span>[Exp:1000x / Drop: 80%]</span></h2>
-									<p>Season 6 Original, Revive los mejores momentos de Mu Online en Pvp y guerras, solo aquí</p>
+									<h2>Insurreccion SLOW <span>[Exp:100x / Drop: 30%]</span></h2>
+									<p>99CX - UNICA, Revive los mejores momentos de Mu Online en Pvp y guerras, solo aquí</p>
 								</div>
 								<div class="slide_desc_right">
 									<span class="btn01">
-									<a href="http://www.tuservermu.com.ve/">Descargar</a>
+									<a href="http://insurreccion.muservidor.com/">Descargar</a>
 									</span>
 									<span class="btn01">
-									<a href="http://www.tuservermu.com.ve">Ir a la web</a>
+									<a href="http://insurreccion.muservidor.com/e">Ir a la web</a>
 									</span>
 								</div>
 							</div>
@@ -130,15 +130,15 @@
 						<div class="slide-desc">
 							<div class="game_info_area">
 								<div class="slide_desc_left">
-									<h2>Tu Server Mu <span>[Exp:300x / Drop:60%]</span></h2>
+									<h2>SUBLEVACION MEDIUM <span>[Exp:1000x / Drop:50%]</span></h2>
 									<p>La Versión mas exclusiva de Mu Peruano te sorprenderá.</p>
 								</div>
 								<div class="slide_desc_right">
 									<span class="btn01">
-									<a href="http://www.tuservermu.com.ve/">Descargar</a>
+									<a href="http://insurreccion.muservidor.com/">Descargar</a>
 									</span>
 									<span class="btn01">
-									<a href="http://www.tuservermu.com.ve">Ir a la web</a>
+									<a href="http://insurreccion.muservidor.com/">Ir a la web</a>
 									</span>
 								</div>
 							</div>
@@ -149,15 +149,15 @@
 						<div class="slide-desc">
 							<div class="game_info_area">
 								<div class="slide_desc_left">
-									<h2>Tu Server Mu <span>[Exp:25x / Drop: 50%]</span></h2>
+									<h2>REBELION FAST <span>[Exp:9999x / Drop: 100%]</span></h2>
 									<p>Los dragones voladores y las monturas nuevas esperan por tí</p>
 								</div>
 								<div class="slide_desc_right">
 									<span class="btn01">
-									<a href="http://www.tuservermu.com.ve">Iniciar Juego</a>
+									<a href="http://rebelion.muservidor.com/">Iniciar Juego</a>
 									</span>
 									<span class="btn01">
-									<a href="http://www.tuservermu.com.ve">Ir a la web</a>
+									<a href="http://rebelion.muservidor.com/">Ir a la web</a>
 									</span>
 								</div>
 							</div>
@@ -180,10 +180,10 @@
 						<img src="sn/portal_main/game_gb_box.jpg" class="gamebox_img">
 						<span class="gamebox_over">
 						<p class="gamestart">
-							<a href="http://www.tuservermu.com.ve">&gt; Descargar</a>
+							<a href="http://insurreccion.muservidor.com/">&gt; Descargar</a>
 						</p>
 						<p class="gamesite">
-							<a href="http://www.tuservermu.com.ve" target="_blank">&gt; Ir a la web</a>
+							<a href="http://insurreccion.muservidor.com/" target="_blank">&gt; Ir a la web</a>
 						</p>
 						</span>
 					</div>
