--- a/index.htm
+++ b/index.htm
@@ -193,10 +193,10 @@
 						<img src="sn/portal_main/game_wt_box.jpg" class="gamebox_img">
 						<span class="gamebox_over">
 						<p class="gamestart">
-							<a href="http://www.tuservermu.com.ve">&gt; Descargar</a>
+							<a href="https://latin-uns.github.io/c-isr/e">&gt; Descargar</a>
 						</p>
 						<p class="gamesite">
-							<a href="http://www.tuservermu.com.ve" target="_blank">&gt; Ir a la web</a>
+							<a href="https://latin-uns.github.io/c-isr/" target="_blank">&gt; Ir a la web</a>
 						</p>
 						</span>
 					</div>
@@ -206,10 +206,10 @@
 						<img src="sn/portal_main/game_rk_box.jpg" class="gamebox_img">
 						<span class="gamebox_over">
 						<p class="gamestart">
-							<a href="http://www.tuservermu.com.ve/">&gt; Iniciar Juego</a>
+							<a href="http://rebelion.muservidor.com/">&gt; Iniciar Juego</a>
 						</p>
 						<p class="gamesite">
-							<a href="http://www.tuservermu.com.ve" target="_blank">&gt; Ir a la web</a>
+							<a href="http://rebelion.muservidor.com/" target="_blank">&gt; Ir a la web</a>
 						</p>
 						</span>
 					</div>
@@ -220,10 +220,10 @@
 						<img src="sn/portal_main/game_lb_box.jpg" class="gamebox_img">
 						<span class="gamebox_over">
 						<p class="gamestart">
-							<a href="http://www.tuservermu.com.ve">&gt; Ir a Facebook</a>
+							<a href="https://latin-uns.github.io/c-isr/">&gt; Ir a Facebook</a>
 						</p>
 						<p class="gamesite">
-							<a href="http://www.tuservermu.com.ve" target="_blank">&gt; Ir a la web</a>
+							<a href="https://latin-uns.github.io/c-isr/" target="_blank">&gt; Ir a la web</a>
 						</p>
 						</span>
 					</div>
@@ -238,13 +238,13 @@
 			<div id="footer">
 				<ul class="social_menu">
 					<li class="footer_facebook">
-						<a href="https://www.facebook.com/TUServerMU.com.ve/" target="_blank"></a>
+						<a href="https://www.facebook.com/groups/1820510624910519/" target="_blank"></a>
 					</li>
 					<li class="footer_twitter">
-						<a href="https://twitter.com/" target="_blank"></a>
+						<a href="https://www.facebook.com/groups/1820510624910519/" target="_blank"></a>
 					</li>
 										<li class="footer_global">
-						<a href="https://twitter.com/" target="_blank"></a>					</li>
+						<a href="https://www.facebook.com/groups/1820510624910519/" target="_blank"></a>					</li>
 
 
 				<ul class="footer_menu">
