--- a/index.htm
+++ b/index.htm
@@ -111,12 +111,12 @@
 						<div class="slide-desc">
 							<div class="game_info_area">
 								<div class="slide_desc_left">
-									<h2>Insurreccion SLOW <span>[Exp:100x / Drop: 30%]</span></h2>
+									<h2>INSURRECCION SLOW <span>[Exp:100x / Drop: 30%]</span></h2>
 									<p>99CX - UNICA, Revive los mejores momentos de Mu Online en Pvp y guerras, solo aquí</p>
 								</div>
 								<div class="slide_desc_right">
 									<span class="btn01">
-									<a href="http://insurreccion.muservidor.com/">Descargar</a>
+									<a href="http://insurreccion.muservidor.com/index.php?page_id=descarga">Descargar</a>
 									</span>
 									<span class="btn01">
 									<a href="http://insurreccion.muservidor.com/e">Ir a la web</a>
@@ -135,10 +135,10 @@
 								</div>
 								<div class="slide_desc_right">
 									<span class="btn01">
-									<a href="http://insurreccion.muservidor.com/">Descargar</a>
+									<a href="https://www.facebook.com/groups/1820510624910519/">Descargar</a>
 									</span>
 									<span class="btn01">
-									<a href="http://insurreccion.muservidor.com/">Ir a la web</a>
+									<a href="https://www.facebook.com/groups/1820510624910519/">Ir a la web</a>
 									</span>
 								</div>
 							</div>
@@ -154,7 +154,7 @@
 								</div>
 								<div class="slide_desc_right">
 									<span class="btn01">
-									<a href="http://rebelion.muservidor.com/">Iniciar Juego</a>
+									<a href="http://rebelion.muservidor.com/index.php?page_id=descarga">Iniciar Juego</a>
 									</span>
 									<span class="btn01">
 									<a href="http://rebelion.muservidor.com/">Ir a la web</a>
@@ -180,7 +180,7 @@
 						<img src="sn/portal_main/game_gb_box.jpg" class="gamebox_img">
 						<span class="gamebox_over">
 						<p class="gamestart">
-							<a href="http://insurreccion.muservidor.com/">&gt; Descargar</a>
+							<a href="http://insurreccion.muservidor.com/index.php?page_id=descarga">&gt; Descargar</a>
 						</p>
 						<p class="gamesite">
 							<a href="http://insurreccion.muservidor.com/" target="_blank">&gt; Ir a la web</a>
@@ -206,7 +206,7 @@
 						<img src="sn/portal_main/game_rk_box.jpg" class="gamebox_img">
 						<span class="gamebox_over">
 						<p class="gamestart">
-							<a href="http://rebelion.muservidor.com/">&gt; Iniciar Juego</a>
+							<a href="http://rebelion.muservidor.com/index.php?page_id=descarga">&gt; Iniciar Juego</a>
 						</p>
 						<p class="gamesite">
 							<a href="http://rebelion.muservidor.com/" target="_blank">&gt; Ir a la web</a>
