--- a/index.htm
+++ b/index.htm
@@ -131,7 +131,7 @@
 							<div class="game_info_area">
 								<div class="slide_desc_left">
 									<h2>SUBLEVACION MEDIUM <span>[Exp:1000x / Drop:50%]</span></h2>
-									<p>La Versión mas exclusiva de Mu Peruano te sorprenderá.</p>
+									<p>La Versión mas exclusiva de Mu latin-uns te sorprenderá.</p>
 								</div>
 								<div class="slide_desc_right">
 									<span class="btn01">
