--- a/index.htm
+++ b/index.htm
@@ -119,7 +119,7 @@
 									<a href="http://insurreccion.muservidor.com/index.php?page_id=descarga">Descargar</a>
 									</span>
 									<span class="btn01">
-									<a href="http://insurreccion.muservidor.com/e">Ir a la web</a>
+									<a href="http://insurreccion.muservidor.com/">Ir a la web</a>
 									</span>
 								</div>
 							</div>
