--- a/index.htm
+++ b/index.htm
@@ -130,15 +130,15 @@
 						<div class="slide-desc">
 							<div class="game_info_area">
 								<div class="slide_desc_left">
-									<h2>SUBLEVACION MEDIUM <span>[Exp:1000x / Drop:50%]</span></h2>
+									<h2>SUBLEVACION MEDIUM <span>[Exp:500x / Drop:50%]</span></h2>
 									<p>La Versión mas exclusiva de Mu latin-uns te sorprenderá.</p>
 								</div>
 								<div class="slide_desc_right">
 									<span class="btn01">
-									<a href="https://www.facebook.com/groups/1820510624910519/">Descargar</a>
+									<a href="http://sublevacion.muservidor.com/">Descargar</a>
 									</span>
 									<span class="btn01">
-									<a href="https://www.facebook.com/groups/1820510624910519/">Ir a la web</a>
+									<a href="http://sublevacion.muservidor.com/">Ir a la web</a>
 									</span>
 								</div>
 							</div>
@@ -193,10 +193,10 @@
 						<img src="sn/portal_main/game_wt_box.jpg" class="gamebox_img">
 						<span class="gamebox_over">
 						<p class="gamestart">
-							<a href="https://latin-uns.github.io/c-isr/e">&gt; Descargar</a>
+							<a href="http://sublevacion.muservidor.com/">&gt; Descargar</a>
 						</p>
 						<p class="gamesite">
-							<a href="https://latin-uns.github.io/c-isr/" target="_blank">&gt; Ir a la web</a>
+							<a href="http://sublevacion.muservidor.com/" target="_blank">&gt; Ir a la web</a>
 						</p>
 						</span>
 					</div>
@@ -206,7 +206,7 @@
 						<img src="sn/portal_main/game_rk_box.jpg" class="gamebox_img">
 						<span class="gamebox_over">
 						<p class="gamestart">
-							<a href="http://rebelion.muservidor.com/index.php?page_id=descarga">&gt; Iniciar Juego</a>
+							<a href="http://rebelion.muservidor.com">&gt; Iniciar Juego</a>
 						</p>
 						<p class="gamesite">
 							<a href="http://rebelion.muservidor.com/" target="_blank">&gt; Ir a la web</a>
